...
  @override
  Widget build(BuildContext context) {
    return Scaffold(
        appBar: AppBar(
          key : Key("drawerBar"),
          backgroundColor: Color.fromRGBO(233, 65, 82, 1),
          title: Text("Scan coupon"),
          actions: <Widget>[
            IconButton(
              key: Key("ButtonScan"),
              icon: Icon(MaterialCommunityIcons.qrcode_scan),
              onPressed: () async {
                ScanResult codeSanner = await BarcodeScanner.scan(
                  options: ScanOptions(
                    useCamera: camera,
                  ),
...
